Scroll bar spacing fix

--- a/src/pages/public/orders/index.scss
+++ b/src/pages/public/orders/index.scss
@@ -25,8 +25,6 @@
   height: 580px;
 
   .order-list-item {
-    padding-right: 20px;
-
     .order-list-item-date {
       font-weight: 600;
       font-size: 24px;
@@ -37,7 +35,7 @@
 
     .order-list-content {
       display: flex;
-      align-items: center;
+      align-items: flex-end;
 
       .order-list-details {
         flex: 1;
@@ -63,5 +61,9 @@
         }
       }
     }
+  }
+
+  .with-scrollbar {
+    padding-right: 20px;
   }
 }
